logs/archive/server_error_7.txt
warning: C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_client\Cargo.toml: unused manifest key: dependencies.tokio.getrandom
warning: unused import: `chrono::Utc`
 --> crates\ask_pete_core\src\reflection.rs:4:5
  |
4 | use chrono::Utc;
  |     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `HashSet`
  --> crates\ask_pete_core\src\lib.rs:11:33
   |
11 | use std::collections::{HashMap, HashSet};
   |                                 ^^^^^^^

warning: unused variable: `pool`
  --> crates\ask_pete_core\src\reflection.rs:17:5
   |
17 |     pool: &PgPool,
   |     ^^^^ help: if this is intentional, prefix it with an underscore: `_pool`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `user_id`
  --> crates\ask_pete_core\src\reflection.rs:18:5
   |
18 |     user_id: i64,
   |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_user_id`

warning: unused variable: `challenge_name`
  --> crates\ask_pete_core\src\reflection.rs:19:5
   |
19 |     challenge_name: &str,
   |     ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_challenge_name`

warning: unused variable: `reflection_text`
  --> crates\ask_pete_core\src\reflection.rs:20:5
   |
20 |     reflection_text: &str,
   |     ^^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_reflection_text`

warning: `ask_pete_core` (lib) generated 6 warnings (run `cargo fix --lib -p ask_pete_core` to apply 2 suggestions)
warning: unused variable: `pool`
  --> crates\ask_pete_server\src\bin\seed_quests.rs:14:9
   |
14 |     let pool = PgPoolOptions::new()
   |         ^^^^ help: if this is intentional, prefix it with an underscore: `_pool`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

    Checking ask_pete_server v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_server)
warning: `ask_pete_server` (bin "seed_quests") generated 1 warning
error[E0432]: unresolved import `infra_ai::local_inference::LocalModel`
 --> crates\ask_pete_server\src\handlers\weigh_station.rs:2:51
  |
2 | use infra_ai::local_inference::{GenerationConfig, LocalModel};
  |                                                   ^^^^^^^^^^ no `LocalModel` in `local_inference`
  |
  = help: consider importing this struct instead:
          infra_ai::LocalModel

error[E0432]: unresolved imports `infra_ai::local_inference::LocalConfigWrapper`, `infra_ai::local_inference::LocalModel`
  --> crates\ask_pete_server\src\main.rs:67:33
   |
67 | use infra_ai::local_inference::{LocalConfigWrapper, LocalModel};
   |                                 ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^ no `LocalModel` in `local_inference`
   |                                 |
   |                                 no `LocalConfigWrapper` in `local_inference`
   |                                 help: a similar name exists in the module: `GemmaConfigWrapper`
   |
   = help: consider importing this struct instead:
           infra_ai::LocalConfigWrapper
   = help: consider importing this struct instead:
           infra_ai::LocalModel

error[E0432]: unresolved import `leptos::get_configuration`
  --> crates\ask_pete_server\src\main.rs:70:5
   |
70 | use leptos::get_configuration;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^ no `get_configuration` in the root

error[E0433]: failed to resolve: could not find `quest` in `handlers`
   --> crates\ask_pete_server\src\main.rs:475:50
    |
475 |             axum::routing::post(crate::handlers::quest::start_quest),
    |                                                  ^^^^^ could not find `quest` in `handlers`

error[E0433]: failed to resolve: could not find `quest` in `handlers`
   --> crates\ask_pete_server\src\main.rs:479:50
    |
479 |             axum::routing::post(crate::handlers::quest::complete_quest),
    |                                                  ^^^^^ could not find `quest` in `handlers`

error[E0412]: cannot find type `StartQuestEvent` in this scope
  --> crates\ask_pete_server\src\main.rs:99:21
   |
99 |     app.add_event::<StartQuestEvent>();
   |                     ^^^^^^^^^^^^^^^ not found in this scope
   |
help: consider importing this struct
   |
17 + use domain_physics::components::StartQuestEvent;
   |

error[E0412]: cannot find type `StallEvent` in this scope
   --> crates\ask_pete_server\src\main.rs:100:21
    |
100 |     app.add_event::<StallEvent>();
    |                     ^^^^^^^^^^ not found in this scope
    |
help: consider importing this struct
    |
 17 + use domain_physics::components::StallEvent;
    |

error[E0425]: cannot find value `sync_quest_inbox` in this scope
   --> crates\ask_pete_server\src\main.rs:136:13
    |
136 |               sync_quest_inbox,
    |               ^^^^^^^^^^^^^^^^ help: a function with a similar name exists: `sync_vote_inbox`
    |
   ::: C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_physics\src\systems.rs:362:1
    |
362 | / pub fn sync_vote_inbox(
363 | |     inbox: Res<crate::components::VoteInbox>,
364 | |     mut event_writer: EventWriter<crate::components::VoteEvent>,
365 | | ) {
    | |_- similarly named function `sync_vote_inbox` defined here

error[E0425]: cannot find value `handle_start_quest` in this scope
   --> crates\ask_pete_server\src\main.rs:137:13
    |
137 |             handle_start_quest,
    |             ^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0277]: the trait bound `bevy_yarnspinner::prelude::YarnSpinnerPlugin: Plugins<_>` is not satisfied
   --> crates\ask_pete_server\src\main.rs:89:21
    |
 89 |     app.add_plugins(YarnSpinnerPlugin::new());
    |         ----------- ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `bevy_app::plugin::sealed::Plugins<_>` is not implemented for `bevy_yarnspinner::prelude::YarnSpinnerPlugin`
    |         |
    |         required by a bound introduced by this call
    |
help: trait impls with same name found
   --> C:\Users\Trinity\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\bevy_app-0.14.2\src\plugin.rs:154:5
    |
154 |     impl<P: Plugin> Plugins<PluginMarker> for P {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
167 |     impl<P: PluginGroup> Plugins<PluginGroupMarker> for P {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: perhaps two different versions of crate `bevy_app` are being used?
note: there are multiple different versions of crate `bevy_app` in the dependency graph
   --> C:\Users\Trinity\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\bevy_app-0.13.2\src\plugin.rs:123:5
    |
123 |       pub trait Plugins<Marker> {
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^ this is the required trait
    |
   ::: crates\ask_pete_server\src\domain\game_logic.rs:1:5
    |
  1 |   use bevy::prelude::*;
    |       ---- one version of crate `bevy_app` used here, as a dependency of crate `bevy_internal`
    |
   ::: crates\ask_pete_server\src\main.rs:55:5
    |
 55 |   use bevy_yarnspinner::prelude::*;
    |       ---------------- one version of crate `bevy_app` used here, as a dependency of crate `bevy_internal`
    |
   ::: C:\Users\Trinity\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\bevy_yarnspinner-0.3.1\src\plugin.rs:33:1
    |
 33 |   pub struct YarnSpinnerPlugin {
    |   ---------------------------- this type doesn't implement the required trait
    |
   ::: C:\Users\Trinity\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\bevy_app-0.14.2\src\app.rs:26:1
    |
 26 | / bevy_ecs::define_label!(
 27 | |     /// A strongly-typed class of labels used to identify an [`App`].
 28 | |     AppLabel,
 29 | |     APP_LABEL_INTERNER
 30 | | );
    | |_- this is the found trait
    = help: you can use `cargo tree` to explore your dependency tree
    = note: required for `bevy_yarnspinner::prelude::YarnSpinnerPlugin` to implement `Plugins<_>`
note: required by a bound in `bevy::prelude::App::add_plugins`
   --> C:\Users\Trinity\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\bevy_app-0.13.2\src\app.rs:747:52
    |
747 |     pub fn add_plugins<M>(&mut self, plugins: impl Plugins<M>) -> &mut Self {
    |                                                    ^^^^^^^^^^ required by this bound in `App::add_plugins`

error[E0282]: type annotations needed
   --> crates\ask_pete_server\src\main.rs:337:56
    |
337 |         socratic_engine_instance.set_local_model(model.clone());
    |                                                        ^^^^^ cannot infer type

error[E0282]: type annotations needed
   --> crates\ask_pete_server\src\main.rs:391:82
    |
391 |                 crate::handlers::weigh_station::WeighStation::new(db_pool, model.clone()),
    |                                                                                  ^^^^^ cannot infer type

Some errors have detailed explanations: E0277, E0282, E0412, E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `ask_pete_server` (bin "ask_pete_server") due to 12 previous errors
